Again update publication link

--- a/_publications/2024-ETRA.md
+++ b/_publications/2024-ETRA.md
@@ -2,10 +2,8 @@
 title: "Shifting Focus with HCEye: Exploring the Dynamics of Visual Highlighting and Cognitive Load on User Attention and Saliency Prediction"
 collection: publications
 category: conferences
-permalink: /publication/2023-01-01-hceye-dynamics
 excerpt: "Examines how visual highlighting and cognitive load affect user attention and saliency."
-date: 2023-01-01
 venue: "ACM Symposium on Eye Tracking Research and Application (ETRA 2024)"
-paperurl: "http://academicpages.github.io/files/hceye-dynamics.pdf"
+paperurl: "https://arxiv.org/abs/2404.14232"
 citation: "A. Das, Z. Wu, I. Škrjanec, and A. Feit. (2023). \"Shifting Focus with HCEye: Exploring the Dynamics of Visual Highlighting and Cognitive Load on User Attention and Saliency Prediction.\" ACM Symposium on Eye Tracking Research and Application (ETRA 2024)."
 ---
