More change on publication

--- a/_publications/2019-QREI.md
+++ b/_publications/2019-QREI.md
@@ -1,7 +1,7 @@
 ---
 title: "The Task Demands-Resources Method: A New Approach to Human Reliability Analysis from a Psychological Perspective"
 collection: publications
-category: journals
+category: manuscripts
 venue: "Quality and Reliability Engineering International"
 paperurl: "https://doi.org/10.1002/qre.2453"
 ---
