--- a/_publications/2024-ETRA.md
+++ b/_publications/2024-ETRA.md
@@ -4,4 +4,5 @@ collection: publications
 category: conferences
 venue: "ACM Symposium on Eye Tracking Research and Application (ETRA 2024)"
 paperurl: "https://arxiv.org/abs/2404.14232"
+date: 2024-05-28
 ---
