--- a/_publications/2017-ASCC.md
+++ b/_publications/2017-ASCC.md
@@ -3,5 +3,6 @@ title: "Relation of Motivation Intensity, Stress Level, and Human Performance: A
 collection: publications
 category: conferences
 venue: "Proceedings of the 11th Asian Control Conference (ASCC 2017)"
-paperurl: "https://ieeexplore.ieee.org/abstract/document/8287518f"
+paperurl: "https://ieeexplore.ieee.org/abstract/document/8287518"
+date: 2018-02-08
 ---
