Update date again

--- a/_publications/2019-QREI.md
+++ b/_publications/2019-QREI.md
@@ -4,4 +4,5 @@ collection: publications
 category: manuscripts
 venue: "Quality and Reliability Engineering International"
 paperurl: "https://doi.org/10.1002/qre.2453"
+date: 2019-02-07
 ---
