--- a/_publications/2025-ETRA.md
+++ b/_publications/2025-ETRA.md
@@ -3,4 +3,5 @@ title: "RelEYEance: Gaze-based assessment of users’ AI-reliance at run-time"
 collection: publications
 category: conferences
 venue: "ACM Symposium on Eye Tracking Research and Application (ETRA 2025, Submitted)"
+date: 2025
 ---
