--- a/_publications/2025-ETRA.md
+++ b/_publications/2025-ETRA.md
@@ -2,6 +2,6 @@
 title: "RelEYEance: Gaze-based assessment of users’ AI-reliance at run-time"
 collection: publications
 category: conferences
-venue: "ACM Symposium on Eye Tracking Research and Application (ETRA 2025, Submitted)"
+venue: "ACM Symposium on Eye Tracking Research and Application (ETRA 2025)"
 date: 2025-11-01
 ---
