--- a/_publications/2026-CSCW.md
+++ b/_publications/2026-CSCW.md
@@ -1,5 +1,5 @@
 ---
-title: "eyond Persuasion: How AI Response Features Shape User Belief Strength and Stance"
+title: "Beyond Persuasion: How AI Response Features Shape User Belief Strength and Stance"
 collection: publications
 category: manuscripts
 venue: 'ACM Conference on Computer-Supported Cooperative Work and Social Computing (Under Review)'
