About: add Child Education + Sep 2025 news; Publications: move CSCW to conferences, mark THMS accepted; CSS: light-green 'Under Review' badge

--- a/_publications/2026-CSCW.md
+++ b/_publications/2026-CSCW.md
@@ -1,7 +1,7 @@
 ---
 title: "Beyond Persuasion: How AI Response Features Shape User Belief Strength and Stance"
 collection: publications
-category: manuscripts
+category: conferences
 venue: 'ACM Conference on Computer-Supported Cooperative Work and Social Computing (Under Review)'
 date: 2025-05-14
 ---
