--- a/_publications/2025-THMS.md
+++ b/_publications/2025-THMS.md
@@ -2,6 +2,6 @@
 title: "Understanding and Predicting Temporal Visual Attention Influenced by Dynamic Highlights in Monitoring Task"
 collection: publications
 category: manuscripts
-venue: 'IEEE Transactions on Human-Machine Systems (Under Review)'
+venue: 'IEEE Transactions on Human-Machine Systems (Accepted)'
 date: 2025-03-04
 ---
