Update About reviewers; separate publication items; add THMS IEEE link; adjust CSCW order

--- a/_publications/2025-THMS.md
+++ b/_publications/2025-THMS.md
@@ -3,5 +3,6 @@ title: "Understanding and Predicting Temporal Visual Attention Influenced by Dyn
 collection: publications
 category: manuscripts
 venue: 'IEEE Transactions on Human-Machine Systems (Accepted)'
+paperurl: "https://ieeexplore.ieee.org/document/11197128"
 date: 2025-03-04
 ---
