Update publications page: remove categories, list by year, double width, remove badges,

--- a/_publications/2025-ETRA.md
+++ b/_publications/2025-ETRA.md
@@ -1,7 +1,8 @@
 ---
-title: "RelEYEance: Gaze-based assessment of users’ AI-reliance at run-time"
+title: "RelEYEance: Gaze-based assessment of users' AI-reliance at run-time"
 collection: publications
 category: conferences
 venue: "ACM Symposium on Eye Tracking Research and Application (ETRA 2025)"
+paperurl: "https://dl.acm.org/doi/10.1145/3725841"
 date: 2025-11-01
 ---
