--- a/_publications/2025-THMS.md
+++ b/_publications/2025-THMS.md
@@ -2,7 +2,7 @@
 title: "Understanding and Predicting Temporal Visual Attention Influenced by Dynamic Highlights in Monitoring Task"
 collection: publications
 category: manuscripts
-venue: 'IEEE Transactions on Human-Machine Systems (Accepted)'
-paperurl: "https://ieeexplore.ieee.org/document/11197128"
+venue: 'IEEE Transactions on Human-Machine Systems'
+paperurl: "https://arxiv.org/abs/2510.08777"
 date: 2025-03-04
 ---
