--- a/_publications/2026-CSCW.md
+++ b/_publications/2026-CSCW.md
@@ -2,6 +2,6 @@
 title: "Beyond Persuasion: How AI Response Features Shape User Belief Strength and Stance"
 collection: publications
 category: conferences
-venue: 'ACM Conference on Computer-Supported Cooperative Work and Social Computing (Under Review)'
+paperurl: "https://arxiv.org/abs/2511.09667"
 date: 2026-01-01
 ---
